contracts/soroban/error.log
    Checking adventure-vault v0.1.0 (C:\Projects\nft-dnd-stellar\contracts\soroban\adventure_vault)
error[E0425]: cannot find function `read_oracle` in this scope
  --> soroban\adventure_vault\src\contract.rs:62:22
   |
62 |         let oracle = read_oracle(&e);
   |                      ^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 1 + use crate::storage::read_oracle;
   |

error[E0425]: cannot find function `read_dnd_token` in this scope
  --> soroban\adventure_vault\src\contract.rs:71:29
   |
71 |             let dnd_token = read_dnd_token(&e);
   |                             ^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 1 + use crate::storage::read_dnd_token;
   |

error[E0425]: cannot find function `read_game_hub` in this scope
  --> soroban\adventure_vault\src\contract.rs:92:24
   |
92 |         let game_hub = read_game_hub(&e);
   |                        ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 1 + use crate::storage::read_game_hub;
   |

error[E0425]: cannot find function `read_oracle` in this scope
   --> soroban\adventure_vault\src\contract.rs:112:22
    |
112 |         let oracle = read_oracle(&e);
    |                      ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_oracle;
    |

error[E0425]: cannot find function `read_fate_verifier` in this scope
   --> soroban\adventure_vault\src\contract.rs:147:29
    |
147 |         let _ = (dice_root, read_fate_verifier(&e));
    |                             ^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_fate_verifier;
    |

error[E0425]: cannot find function `read_oracle` in this scope
   --> soroban\adventure_vault\src\contract.rs:171:22
    |
171 |         let oracle = read_oracle(&e);
    |                      ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_oracle;
    |

error[E0425]: cannot find function `read_dnd_token` in this scope
   --> soroban\adventure_vault\src\contract.rs:185:29
    |
185 |             let dnd_token = read_dnd_token(&e);
    |                             ^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_dnd_token;
    |

error[E0425]: cannot find function `read_game_hub` in this scope
   --> soroban\adventure_vault\src\contract.rs:218:24
    |
218 |         let game_hub = read_game_hub(&e);
    |                        ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_game_hub;
    |

error[E0425]: cannot find function `read_fate_verifier` in this scope
   --> soroban\adventure_vault\src\contract.rs:272:29
    |
272 |         let _ = (dice_root, read_fate_verifier(&e));
    |                             ^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_fate_verifier;
    |

error[E0425]: cannot find function `read_oracle` in this scope
   --> soroban\adventure_vault\src\contract.rs:284:22
    |
284 |         let oracle = read_oracle(&e);
    |                      ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_oracle;
    |

error[E0425]: cannot find function `read_game_hub` in this scope
   --> soroban\adventure_vault\src\contract.rs:321:24
    |
321 |         let game_hub = read_game_hub(&e);
    |                        ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_game_hub;
    |

error[E0425]: cannot find function `read_admin` in this scope
   --> soroban\adventure_vault\src\contract.rs:345:21
    |
345 |         let admin = read_admin(&e);
    |                     ^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_admin;
    |

error[E0425]: cannot find function `read_admin` in this scope
   --> soroban\adventure_vault\src\contract.rs:352:21
    |
352 |         let admin = read_admin(&e);
    |                     ^^^^^^^^^^
    |
help: a local variable with a similar name exists
    |
352 -         let admin = read_admin(&e);
352 +         let admin = new_admin(&e);
    |
help: consider importing this function
    |
  1 + use crate::storage::read_admin;
    |

error[E0425]: cannot find function `read_admin` in this scope
   --> soroban\adventure_vault\src\contract.rs:364:21
    |
364 |         let admin = read_admin(&e);
    |                     ^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::storage::read_admin;
    |

warning: unused import: `String`
 --> soroban\adventure_vault\src\session.rs:3:46
  |
3 | use soroban_sdk::{Address, BytesN, Env, Map, String, Vec};
  |                                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `adventure-vault` (lib) generated 1 warning
error: could not compile `adventure-vault` (lib) due to 14 previous errors; 1 warning emitted
